feat: added user registration through invitation
